--- a/app/views/appellant-submission/v11/full/contact-details/your-details.html
+++ b/app/views/appellant-submission/v11/full/contact-details/your-details.html
@@ -12,8 +12,8 @@
     html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
   }) }}
   {{ govukBackLink({
-    text: "Back to task list",
-    href: "/appellant-submission/"+version+"/full/task-list"
+    text: "Back",
+    href: "javascript:history.go(-1);"
   }) }}
 {% endblock %}
 
