Skip question links added to "proposed development"

--- a/app/views/lpa-questionnaire/fullv1/procedure-type/inquiry-witnesses.html
+++ b/app/views/lpa-questionnaire/fullv1/procedure-type/inquiry-witnesses.html
@@ -41,9 +41,12 @@
           value: data["lpaq-"+version+"-proceduretype-inquirywitnesses"]
         }) }}
         
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
