--- a/app/views/lpa-questionnaire/fullv1/proposed-development/site-plan.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/site-plan.html
@@ -69,9 +69,12 @@
           '
         }) }} 
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="involves-listed-building">Skip this question</a>
+        </div>
 
       </form>
 
