--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/protected-species-consultation.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/protected-species-consultation.html
@@ -68,9 +68,12 @@
           '
         }) }} 
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
