--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil.html
@@ -54,9 +54,12 @@
           ]
         }) }}
         
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
