--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary.html
@@ -131,9 +131,12 @@
         ]
       }) }}
         
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
