--- a/app/views/lpa-questionnaire/fullv1/proposed-development/historic-england.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/historic-england.html
@@ -65,9 +65,12 @@
           '
         }) }} 
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="traveller">Skip this question</a>
+        </div>
 
       </form>
 
