--- a/app/views/lpa-questionnaire/fullv1/proposed-development/listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/listed-building-details.html
@@ -128,9 +128,12 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="traveller">Skip this question</a>
+        </div>
 
       </form>
 
