--- a/app/views/lpa-questionnaire/fullv1/proposed-development/tpo-details.html
+++ b/app/views/lpa-questionnaire/fullv1/proposed-development/tpo-details.html
@@ -75,9 +75,12 @@
           value: data["lpaq-"+version+"-proposeddevelopment-tpo-details"]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="../task-list">Skip this question</a>
+        </div>
 
       </form>
 
