--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/affects-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/affects-listed-building-details.html
@@ -72,9 +72,12 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
