--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/appeals-immediate-area-details.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/appeals-immediate-area-details.html
@@ -45,9 +45,12 @@
           value: data["lpaq-"+version+"-surroundingarea-appealsimmediatearea-details"]
         }) }}
         
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
