--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/sssi-designation.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/sssi-designation.html
@@ -114,9 +114,12 @@
           ]
         }) }}
 
-        {{ govukButton({
-          text: "Continue"
-        }) }}
+         <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Continue"
+          }) }}
+          <a class="govuk-link" href="#">Skip this question</a>
+        </div>
 
       </form>
 
