skip question links for "surrounding areas"

--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/conservation-area.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/conservation-area.html
@@ -62,7 +62,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="aonb">Skip this question</a>
         </div>
 
       </form>
