--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/green-belt.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/green-belt.html
@@ -58,7 +58,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="conservation-area">Skip this question</a>
         </div>
 
       </form>
