--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/affects-listed-building-details.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/affects-listed-building-details.html
@@ -76,7 +76,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="ancient-monument">Skip this question</a>
         </div>
 
       </form>
