--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/affects-listed-building.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/affects-listed-building.html
@@ -58,7 +58,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="ancient-monument">Skip this question</a>
         </div>
 
       </form>
