--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/aonb.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/aonb.html
@@ -57,7 +57,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="sssi">Skip this question</a>
         </div>
 
       </form>
