--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/appeals-immediate-area-details.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/appeals-immediate-area-details.html
@@ -49,7 +49,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="green-belt">Skip this question</a>
         </div>
 
       </form>
