--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/sssi-designation.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/sssi-designation.html
@@ -118,7 +118,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="affects-listed-building">Skip this question</a>
         </div>
 
       </form>
