skip question links for environmental impact

--- a/app/views/lpa-questionnaire/fullv1/environmental-impact/environmental-statement-sitenotice.html
+++ b/app/views/lpa-questionnaire/fullv1/environmental-impact/environmental-statement-sitenotice.html
@@ -73,7 +73,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="notifications-consultations">Skip this question</a>
         </div>
 
       </form>
