--- a/app/views/lpa-questionnaire/fullv1/environmental-impact/environmental-statement-details.html
+++ b/app/views/lpa-questionnaire/fullv1/environmental-impact/environmental-statement-details.html
@@ -76,7 +76,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="notifications-consultations">Skip this question</a>
         </div>
 
       </form>
