--- a/app/views/lpa-questionnaire/fullv1/environmental-impact/schedule-one.html
+++ b/app/views/lpa-questionnaire/fullv1/environmental-impact/schedule-one.html
@@ -164,7 +164,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="screening-opinion">Skip this question</a>
         </div>
 
       </form>
