--- a/app/views/lpa-questionnaire/fullv1/environmental-impact/schedule-two-sensitive-details.html
+++ b/app/views/lpa-questionnaire/fullv1/environmental-impact/schedule-two-sensitive-details.html
@@ -43,7 +43,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="screening-opinion">Skip this question</a>
         </div>
 
       </form>
