--- a/app/views/lpa-questionnaire/fullv1/environmental-impact/screening-opinion-details.html
+++ b/app/views/lpa-questionnaire/fullv1/environmental-impact/screening-opinion-details.html
@@ -93,7 +93,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="environmental-statement">Skip this question</a>
         </div>
 
       </form>
