skip question links for your decision

--- a/app/views/lpa-questionnaire/fullv1/your-decision/planning-officers-report.html
+++ b/app/views/lpa-questionnaire/fullv1/your-decision/planning-officers-report.html
@@ -74,7 +74,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="plans-documents-drawings">Skip this question</a>
         </div>
 
       </form>
