--- a/app/views/lpa-questionnaire/fullv1/your-decision/extra-conditions.html
+++ b/app/views/lpa-questionnaire/fullv1/your-decision/extra-conditions.html
@@ -77,7 +77,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
