--- a/app/views/lpa-questionnaire/fullv1/your-decision/plans-documents-drawings.html
+++ b/app/views/lpa-questionnaire/fullv1/your-decision/plans-documents-drawings.html
@@ -73,7 +73,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="extra-conditions">Skip this question</a>
         </div>
 
       </form>
