--- a/app/views/lpa-questionnaire/fullv1/interested-parties/publicise-application.html
+++ b/app/views/lpa-questionnaire/fullv1/interested-parties/publicise-application.html
@@ -54,7 +54,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="tell-application">Skip this question</a>
         </div>
 
       </form>
