--- a/app/views/lpa-questionnaire/fullv1/interested-parties/tell-application-letter.html
+++ b/app/views/lpa-questionnaire/fullv1/interested-parties/tell-application-letter.html
@@ -74,7 +74,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="told-appeal">Skip this question</a>
         </div>
 
       </form>
