skip question links for representations

--- a/app/views/lpa-questionnaire/fullv1/representations/statutory-consultees.html
+++ b/app/views/lpa-questionnaire/fullv1/representations/statutory-consultees.html
@@ -69,7 +69,11 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          {% if 'Other parties' in data['lpaq-'+version+'-representations-whichparties'] %}
+            <a class="govuk-link" href="other">Skip this question</a>
+          {% else %}
+            <a class="govuk-link" href="../task-list">Skip this question</a>
+          {% endif %}
         </div>
 
       </form>
