--- a/app/views/lpa-questionnaire/fullv1/representations/site-owners.html
+++ b/app/views/lpa-questionnaire/fullv1/representations/site-owners.html
@@ -69,7 +69,14 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+
+          {% if 'Statutory consultees' in data['lpaq-'+version+'-representations-whichparties'] %}
+            <a class="govuk-link" href="statutory-consultees">Skip this question</a>
+          {% elseif 'Other parties' in data['lpaq-'+version+'-representations-whichparties'] %}
+            <a class="govuk-link" href="other">Skip this question</a>
+          {% else %}
+            <a class="govuk-link" href="../task-list">Skip this question</a>
+          {% endif %}
         </div>
 
       </form>
