skip question links for local plans and policies

--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/statutory-development.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/statutory-development.html
@@ -70,7 +70,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="neighbourhood-plan">Skip this question</a>
         </div>
 
       </form>
