--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/cil.html
@@ -58,7 +58,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
