--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/other.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/other.html
@@ -70,7 +70,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="supplementary">Skip this question</a>
         </div>
 
       </form>
