--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary.html
@@ -135,7 +135,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="cil">Skip this question</a>
         </div>
 
       </form>
