--- a/app/views/lpa-questionnaire/fullv1/site-access/enter-site.html
+++ b/app/views/lpa-questionnaire/fullv1/site-access/enter-site.html
@@ -72,7 +72,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="health-safety">Skip this question</a>
         </div>
 
       </form>
