--- a/app/views/lpa-questionnaire/fullv1/site-access/health-safety.html
+++ b/app/views/lpa-questionnaire/fullv1/site-access/health-safety.html
@@ -93,7 +93,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
