--- a/app/views/lpa-questionnaire/fullv1/site-access/public-land.html
+++ b/app/views/lpa-questionnaire/fullv1/site-access/public-land.html
@@ -58,7 +58,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="enter-site">Skip this question</a>
         </div>
 
       </form>
