--- a/app/views/lpa-questionnaire/fullv1/procedure-type/decided-by.html
+++ b/app/views/lpa-questionnaire/fullv1/procedure-type/decided-by.html
@@ -64,7 +64,7 @@
           {{ govukButton({
             text: "Continue"
           }) }}
-          <a class="govuk-link" href="#">Skip this question</a>
+          <a class="govuk-link" href="../task-list">Skip this question</a>
         </div>
 
       </form>
