Content update to supplementary planning documents

--- a/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary.html
+++ b/app/views/lpa-questionnaire/fullv1/local-plans-policies/supplementary.html
@@ -32,10 +32,14 @@
         <h1 class="govuk-heading-xl">
           Supplementary planning documents
         </h1>
+
+        <p class="govuk-body">
+          You can add one supplementary planning document at a time. You will be able to add more later.
+        </p>
         
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="lpaq-{{version}}-localplanspolicies-supplementary">
-            Upload files
+            Upload file
           </label>
           <p class="govuk-body">
             Drag and drop a file or select "choose files"
