--- a/app/views/lpa-questionnaire/fullv1/surrounding-area/sssi-designation.html
+++ b/app/views/lpa-questionnaire/fullv1/surrounding-area/sssi-designation.html
@@ -42,8 +42,8 @@
             }
           }) }}
         {% endset -%}
-
-        {{ govukRadios({
+        
+        {{ govukCheckboxes({
           idPrefix: "lpaq-"+version+"-surroundingarea-sssi-designation",
           name: "lpaq-"+version+"-surroundingarea-sssi-designation",
           fieldset: {
