Decision notice removed from CYA

--- a/app/views/lpa-questionnaire/fullv1/check-your-answers.html
+++ b/app/views/lpa-questionnaire/fullv1/check-your-answers.html
@@ -593,7 +593,7 @@
           </dd>
         </div>
 
-        <div class="govuk-summary-list__row">
+        <!--div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
             What your decision notice would have said
           </dt>
@@ -605,7 +605,7 @@
               Change<span class="govuk-visually-hidden"> </span>
             </a>
           </dd>
-        </div>
+        </div-->
 
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
