Fix to footer and error links from home page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -940,29 +940,6 @@
           </div>
         </div>
 
-        <div class="govuk-accordion__section">
-          <div class="govuk-accordion__section-header">
-            <h2 class="govuk-accordion__section-heading">
-              <span class="govuk-accordion__section-button" id="accordion-default-heading-footererror">
-                Footer and error pages
-              </span>
-            </h2>
-          </div>
-          <div id="accordion-default-content-footererror" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-footererror">
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li><a class="govuk-link" href="help/accessibility-statement">accessibility statement</a></li>
-              <li><a class="govuk-link" href="help/contact">contact</a></li>
-              <li><a class="govuk-link" href="help/privacy">privacy</a></li>
-              <li><a class="govuk-link" href="help/terms-and-conditions">terms and conditions</a></li>
-              <li><a class="govuk-link" href="error/not-found">page not found - 404</a></li>
-              <li><a class="govuk-link" href="error/unhandled-exception">unhandled exception - 500</a></li>
-              <li><a href="error/500-error-service-unavailable" class="govuk-link">500 error - service unavailable (AS-1644)</a>
-            </ul>
-
-          </div>
-        </div>
-
       </div>
       
       <h2 class="govuk-heading-l govuk-!-margin-top-9">Archived Private Beta Prototypes</h2>
@@ -1666,6 +1643,29 @@
                 </details>
               </div>
             </div>
+
+          </div>
+        </div>
+
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-footererror">
+                Footer and error pages
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-footererror" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-footererror">
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a class="govuk-link" href="https://has-appeal.herokuapp.com/help/accessibility-statement" target="_blank">accessibility statement</a></li>
+              <li><a class="govuk-link" href="https://has-appeal.herokuapp.com/help/contact" target="_blank">contact</a></li>
+              <li><a class="govuk-link" href="https://has-appeal.herokuapp.com/help/privacy" target="_blank">privacy</a></li>
+              <li><a class="govuk-link" href="https://has-appeal.herokuapp.com/help/terms-and-conditions" target="_blank">terms and conditions</a></li>
+              <li><a class="govuk-link" href="https://has-appeal.herokuapp.com/error/not-found" target="_blank">page not found - 404</a></li>
+              <li><a class="govuk-link" href="https://has-appeal.herokuapp.com/error/unhandled-exception" target="_blank">unhandled exception - 500</a></li>
+              <li><a href="https://has-appeal.herokuapp.com/error/500-error-service-unavailable" target="_blank" class="govuk-link">500 error - service unavailable (AS-1644)</a>
+            </ul>
 
           </div>
         </div>
